0.21.3
0.21.2 2019-03-25
	update: enable CSS and JavaScript from external URLs (GH#231)
	update: 802.1Q: do permission check for changing native vlan while keeping the allowed vlans list unchanged
	update: 802.1Q: foreign VLANs (missing from the vlan domain list) are not propagated to uplinks
	update: ability to extend supported device breed list via plug-in
	update: add a server configuration report (same as before install/upgrade)
	update: new modular port type 'SFP28'
	update: allow to delete local user accounts (Mantis#1089)
	update: show names in allocated units when assigning rackspace (Mantis#1711)
	update: drop support for $localreports
	update: display file comment in the SELECT (Mantis#1419)
	update: change command-line arguments in git-commit
	new feature: "shared router" allocation (GH#210 by Vladimir Ivanov)
	new feature: optional tag descriptions
	new feature: support for HP N.11.78 and IOS 15 (GH #225 by Vasilii Shashkov)
	bugfix: fixup an SQL query in the integrity report
	bugfix: make the "Uncheck all" button rack-specific
0.21.1 2017-10-22
	update: improve Percona server support (Mantis#1793)
	bugfix: fix an upgrade bug introduced in 0.21.0 (found by Chris James)
0.21.0 2017-10-01
	update: better display objects that have no common name
	update: highlight RackCode syntax in the Permissions viewer too
	update: refine delivery of rack thumb images
	update: new plugin architecture
	update: add support for IP-over-InfiniBand L2 addresses
	update: improve MariaDB support
	update: rename VLANIPV4NET_LISTSRC to VLANNET_LISTSRC
	bugfix: put dictionary-based attributes formatting right
	bugfix: date attributes now can be set for racks, rows and locations
	bugfix: add support for PHP 7.1 (Mantis #1771)
	bugfix: fix logging out (Mantis #496 and duplicates)
	new feature: tag colors (GH#158 by Maik Ehinger)
0.20.14 2017-08-10
	update: cover comments too in IPv4 & IPv6 search (Mantis#1773 by Fred Stuck)