@@ -265,6 +265,7 @@ function getConfigDefaults()
 		'NEAREST_RACKS_CHECKBOX' => 'yes',
 		'SHOW_OBJECTTYPE' => 'yes',
 		'IPV4_TREE_SHOW_UNALLOCATED' => 'yes',
+		'OBJECTLOG_PREVIEW_ENTRIES' => '5',
 	);
 }
 
