@@ -1,4 +1,5 @@
 0.21.3
+	update: add a log entry limit to the object page (Mantis#769)
 0.21.2 2019-03-25
 	update: enable CSS and JavaScript from external URLs (GH#231)
 	update: 802.1Q: do permission check for changing native vlan while keeping the allowed vlans list unchanged
